<resources>
    <string name="google_map_key" translatable="false">AIzaSyARKYFxOOVGC59Du8k6ATS2t48826Qpm2g</string>

    <string name="app_name">imhungryapp</string>

    <string name="findnearbyrestaurants">find nearby restaurants</string>

    <string name="find">Find</string>
    <string name="changelanguage">Change Language</string>
    <string name="restaurants">restaurants</string>

    <string name="bank">Bank</string>
    <string name="restaurantDestination">restaurant Destination</string>
    <string name="TunisiaJedaidanandRades">Tunisia,Jedaida\ nand Rades</string>
    <string name="chooseyourdestinationtoyournearbyrestaurant">choose your destinationto\your nearby restaurant"</string>





</resources>