<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView

        android:text="@string/findnearbyrestaurants"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textview"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:padding="8dp">

        <Spinner
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/sp_type"

            android:background="@android:drawable/editbox_background"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/bt_find"
            android:background="@drawable/button_bg"
            android:text="@string/find"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/layout"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/changeLang"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/button_bg"
            android:text="@string/changelanguage"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>