<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/map"
    tools:context=".MainActivity2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/top_bg"
            android:padding="40dp">

            <Button
                android:id="@+id/changeLang"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/button_bg"
                android:text="@string/changelanguage"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8A070707"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:src="@drawable/rating"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TunisiaJedaidanandRades"
                android:textColor="#fff"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseyourdestinationtoyournearbyrestaurant"
                android:textColor="#fff"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/img"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/img_1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/img_2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/img_3"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"/>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/img_4"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/go"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/restaurantDestination"
                    android:textColor="#fff"
                    android:textSize="14dp"
                    app:cornerRadius="20dp" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

